Try preventing author card from stretching

--- a/src/app/paper/paper.component.scss
+++ b/src/app/paper/paper.component.scss
@@ -4,16 +4,17 @@
   grid-gap: 10px;
   //align-items: end;
   @media (min-width: 30em) {
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 75% 25%;
   }
 }
 
 
-.grid > article {
+.grid > article .author {
   border: 1px solid #ccc;
   box-shadow: 2px 2px 6px 0px  rgba(0,0,0,0.3);
   text-align: center;
   position: relative;
+  max-height: fit-content;
 }
 .thumbnail {
   max-width: 100%;
